--- a/src/Text/home.xhtml
+++ b/src/Text/home.xhtml
@@ -13,7 +13,7 @@
     <div class="maincontent">
       <h2 class="Title">The Java EE 7 Tutorial</h2>
 
-      <h4 class="TitleAuthor">Eric Jendrock<br />
+      <h4 class="TitleAuthor sigil_not_in_toc">Eric Jendrock<br />
       Ricardo Cervera-Navarro<br />
       Ian Evans<br />
       Kim Haase<br />
