--- a/src/Text/partbeanvalidation.xhtml
+++ b/src/Text/partbeanvalidation.xhtml
@@ -14,17 +14,17 @@
 
     <h1>Part IV<br /></h1>
 
-    <h1 class="part">Bean Validation</h1>
+    <h1 class="part" id="sigil_toc_id_678">Bean Validation</h1>
 
     <p>Part IV explores Java API for JavaBean Validation ("Bean Validation"). This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/bean-validation.xhtml">Chapter 21, "Introduction to Bean Validation"</a></p>
+        <p><a href="../Text/bean-validation.xhtml#CHDGJIIA">Chapter 21, "Introduction to Bean Validation"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/bean-validation-advanced.xhtml">Chapter 22, "Bean Validation: Advanced Topics"</a></p>
+        <p><a href="../Text/bean-validation-advanced.xhtml#GKAHP">Chapter 22, "Bean Validation: Advanced Topics"</a></p>
       </li>
     </ul>
   </div>
