--- a/src/Text/partcasestudies.xhtml
+++ b/src/Text/partcasestudies.xhtml
@@ -14,21 +14,21 @@
 
     <h1>Part XII<br /></h1>
 
-    <h1 class="part">Case Studies</h1>
+    <h1 class="part" id="sigil_toc_id_679">Case Studies</h1>
 
     <p>Part XII presents case studies that use a variety of Java EE technologies. This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/dukes-bookstore.xhtml">Chapter 57, "Duke's Bookstore Case Study Example"</a></p>
+        <p><a href="../Text/dukes-bookstore.xhtml#GLNVI">Chapter 57, "Duke's Bookstore Case Study Example"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/dukes-forest.xhtml">Chapter 58, "Duke's Tutoring Case Study Example"</a></p>
+        <p><a href="../Text/dukes-tutoring.xhtml#GKAEE">Chapter 58, "Duke's Tutoring Case Study Example"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/dukes-tutoring.xhtml">Chapter 59, "Duke's Forest Case Study Example"</a></p>
+        <p><a href="../Text/dukes-forest.xhtml#GLNPW">Chapter 59, "Duke's Forest Case Study Example"</a></p>
       </li>
     </ul>
   </div>
