--- a/src/Text/partcdi.xhtml
+++ b/src/Text/partcdi.xhtml
@@ -14,25 +14,25 @@
 
     <h1>Part V<br /></h1>
 
-    <h1 class="part">Contexts and Dependency Injection for Java EE</h1>
+    <h1 class="part" id="sigil_toc_id_680">Contexts and Dependency Injection for Java EE</h1>
 
     <p>Part V explores Contexts and Dependency Injection for Java EE (CDI). This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/cdi-basic.xhtml">Chapter 23, "Introduction to Contexts and Dependency Injection for Java EE"</a></p>
+        <p><a href="../Text/cdi-basic.xhtml#GIWHB">Chapter 23, "Introduction to Contexts and Dependency Injection for Java EE"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/cdi-basic-examples.xhtml">Chapter 24, "Running the Basic Contexts and Dependency Injection Examples"</a></p>
+        <p><a href="../Text/cdi-basicexamples.xhtml#GJBLS">Chapter 24, "Running the Basic Contexts and Dependency Injection Examples"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/cdi-adv.xhtml">Chapter 25, "Contexts and Dependency Injection for Java EE: Advanced Topics"</a></p>
+        <p><a href="../Text/cdi-adv.xhtml#GJEHI">Chapter 25, "Contexts and Dependency Injection for Java EE: Advanced Topics"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/cdi-adv-examples.xhtml">Chapter 26, "Running the Advanced Contexts and Dependency Injection Examples"</a></p>
+        <p><a href="../Text/cdi-adv-examples.xhtml#GKHRE">Chapter 26, "Running the Advanced Contexts and Dependency Injection Examples"</a></p>
       </li>
     </ul>
   </div>
