--- a/src/Text/partmessaging.xhtml
+++ b/src/Text/partmessaging.xhtml
@@ -14,17 +14,17 @@
 
     <h1>Part IX<br /></h1>
 
-    <h1 class="part">Messaging</h1>
+    <h1 class="part" id="sigil_toc_id_683">Messaging</h1>
 
     <p>Part IX introduces messaging. This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/jms-concepts.xhtml">Chapter 45, "Java Message Service Concepts"</a></p>
+        <p><a href="../Text/jms-concepts.xhtml#BNCDQ">Chapter 45, "Java Message Service Concepts"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jms-examples.xhtml">Chapter 46, "Java Message Service Examples"</a></p>
+        <p><a href="../Text/jms-examples.xhtml#BNCGV">Chapter 46, "Java Message Service Examples"</a></p>
       </li>
     </ul>
   </div>
