--- a/src/Text/partpersist.xhtml
+++ b/src/Text/partpersist.xhtml
@@ -14,41 +14,41 @@
 
     <h1>Part VIII<br /></h1>
 
-    <h1 class="part">Persistence</h1>
+    <h1 class="part" id="sigil_toc_id_684">Persistence</h1>
 
     <p>Part VIII explores the Java Persistence API. This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/persistence-intro.xhtml">Chapter 37, "Introduction to the Java Persistence API"</a></p>
+        <p><a href="../Text/persistence-intro.xhtml#BNBPZ">Chapter 37, "Introduction to the Java Persistence API"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/persistence-basic-examples.xhtml">Chapter 38, "Running the Persistence Examples"</a></p>
+        <p><a href="../Text/persistence-basicexamples.xhtml#GIJST">Chapter 38, "Running the Persistence Examples"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/persistence-querylanguage.xhtml">Chapter 39, "The Java Persistence Query Language"</a></p>
+        <p><a href="../Text/persistence-querylanguage.xhtml#BNBTG">Chapter 39, "The Java Persistence Query Language"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/persistence-criteria.xhtml">Chapter 40, "Using the Criteria API to Create Queries"</a></p>
+        <p><a href="../Text/persistence-criteria.xhtml#GJITV">Chapter 40, "Using the Criteria API to Create Queries"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/persistence-string-queries.xhtml">Chapter 41, "Creating and Using String-Based Criteria Queries"</a></p>
+        <p><a href="../Text/persistence-string-queries.xhtml#GKJIQ">Chapter 41, "Creating and Using String-Based Criteria Queries"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/persistence-locking.xhtml">Chapter 42, "Controlling Concurrent Access to Entity Data with Locking"</a></p>
+        <p><a href="../Text/persistence-locking.xhtml#GKJJF">Chapter 42, "Controlling Concurrent Access to Entity Data with Locking"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/persistence-entitygraphs.xhtml">Chapter 43, "Creating Fetch Plans with Entity Graphs"</a></p>
+        <p><a href="../Text/persistence-entitygraphs.xhtml#BABIJIAC">Chapter 43, "Creating Fetch Plans with Entity Graphs"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/persistence-cache.xhtml">Chapter 44, "Using a Second-Level Cache with Java Persistence API Applications"</a></p>
+        <p><a href="../Text/persistence-cache.xhtml#GKJIA">Chapter 44, "Using a Second-Level Cache with Java Persistence API Applications"</a></p>
       </li>
     </ul>
   </div>
