--- a/src/Text/partsupporttechs.xhtml
+++ b/src/Text/partsupporttechs.xhtml
@@ -14,33 +14,33 @@
 
     <h1>Part XI<br /></h1>
 
-    <h1 class="part">Java EE Supporting Technologies</h1>
+    <h1 class="part" id="sigil_toc_id_687">Java EE Supporting Technologies</h1>
 
     <p>Part XI explores several technologies that support the Java EE platform. This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/transactions.xhtml">Chapter 51, "Transactions"</a></p>
+        <p><a href="../Text/transactions.xhtml#BNCIH">Chapter 51, "Transactions"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/resources.xhtml">Chapter 52, "Resource Adapters and Contracts"</a></p>
+        <p><a href="../Text/resources.xhtml#BNCJH">Chapter 52, "Resource Adapters and Contracts"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/connector-example.xhtml">Chapter 53, "The Resource Adapter Examples"</a></p>
+        <p><a href="../Text/connectorexample.xhtml#GLODB">Chapter 53, "The Resource Adapter Examples"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/interceptors.xhtml">Chapter 54, "Using Java EE Interceptors"</a></p>
+        <p><a href="../Text/interceptors.xhtml#GKEED">Chapter 54, "Using Java EE Interceptors"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/batch-processing.xhtml">Chapter 55, "Batch Processing"</a></p>
+        <p><a href="../Text/batch-processing.xhtml#GKJIQ6">Chapter 55, "Batch Processing"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/concurrency-utilities.xhtml">Chapter 56, "Concurrency Utilities for Java EE"</a></p>
+        <p><a href="../Text/concurrency-utilities.xhtml#GKJIQ8">Chapter 56, "Concurrency Utilities for Java EE"</a></p>
       </li>
     </ul>
   </div>
