--- a/src/Text/partwebtier.xhtml
+++ b/src/Text/partwebtier.xhtml
@@ -14,69 +14,69 @@
 
     <h1>Part III<br /></h1>
 
-    <h1 class="part">The Web Tier</h1>
+    <h1 class="part" id="sigil_toc_id_689">The Web Tier</h1>
 
     <p>Part III explores the technologies in the web tier. This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/webapp.xhtml">Chapter 6, "Getting Started with Web Applications"</a></p>
+        <p><a href="../Text/webapp.xhtml#BNADR">Chapter 6, "Getting Started with Web Applications"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jsf-intro.xhtml">Chapter 7, "JavaServer Faces Technology"</a></p>
+        <p><a href="../Text/jsf-intro.xhtml#BNAPH">Chapter 7, "JavaServer Faces Technology"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jsf-facelets.xhtml">Chapter 8, "Introduction to Facelets"</a></p>
+        <p><a href="../Text/jsf-facelets.xhtml#GIEPX">Chapter 8, "Introduction to Facelets"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jsf-el.xhtml">Chapter 9, "Expression Language"</a></p>
+        <p><a href="../Text/jsf-el.xhtml#GJDDD">Chapter 9, "Expression Language"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jsf-page.xhtml">Chapter 10, "Using JavaServer Faces Technology in Web Pages"</a></p>
+        <p><a href="../Text/jsf-page.xhtml#BNAQZ">Chapter 10, "Using JavaServer Faces Technology in Web Pages"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jsf-page-core.xhtml">Chapter 11, "Using Converters, Listeners, and Validators"</a></p>
+        <p><a href="../Text/jsf-page-core.xhtml#GJCUT">Chapter 11, "Using Converters, Listeners, and Validators"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jsf-develop.xhtml">Chapter 12, "Developing with JavaServer Faces Technology"</a></p>
+        <p><a href="../Text/jsf-develop.xhtml#BNATX">Chapter 12, "Developing with JavaServer Faces Technology"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jsf-ajax.xhtml">Chapter 13, "Using Ajax with JavaServer Faces Technology"</a></p>
+        <p><a href="../Text/jsf-ajax.xhtml#GKIOW">Chapter 13, "Using Ajax with JavaServer Faces Technology"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jsf-advanced-cc.xhtml">Chapter 14, "Composite Components: Advanced Topics and an Example"</a></p>
+        <p><a href="../Text/jsf-advanced-cc.xhtml#GKHXA">Chapter 14, "Composite Components: Advanced Topics and an Example"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jsf-custom.xhtml">Chapter 15, "Creating Custom UI Components and Other Custom Objects"</a></p>
+        <p><a href="../Text/jsf-custom.xhtml#BNAVG">Chapter 15, "Creating Custom UI Components and Other Custom Objects"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jsf-configure.xhtml">Chapter 16, "Configuring JavaServer Faces Applications"</a></p>
+        <p><a href="../Text/jsf-configure.xhtml#BNAWO">Chapter 16, "Configuring JavaServer Faces Applications"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/servlets.xhtml">Chapter 17, "Java Servlet Technology"</a></p>
+        <p><a href="../Text/servlets.xhtml#BNAFD">Chapter 17, "Java Servlet Technology"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/websocket.xhtml">Chapter 18, "Java API for WebSocket"</a></p>
+        <p><a href="../Text/websocket.xhtml#GKJIQ5">Chapter 18, "Java API for WebSocket"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jsonp.xhtml">Chapter 19, "JSON Processing"</a></p>
+        <p><a href="../Text/jsonp.xhtml#GLRBB">Chapter 19, "JSON Processing"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/webi18n.xhtml">Chapter 20, "Internationalizing and Localizing Web Applications"</a></p>
+        <p><a href="../Text/webi18n.xhtml#BNAXU">Chapter 20, "Internationalizing and Localizing Web Applications"</a></p>
       </li>
     </ul>
   </div>
