--- a/src/Text/webservices-intro.xhtml
+++ b/src/Text/webservices-intro.xhtml
@@ -37,7 +37,7 @@
     <a id="GIJVH"></a><a id="JEETT00420"></a>
 
     <div class="sect1">
-      <h1 class="sect1"><span class="secnum">27.1</span> <a id="sthref1450"></a>What Are Web Services?</h1>
+      <h1 class="sect1" id="sigil_toc_id_980"><span class="secnum">27.1</span> <a id="sthref1450"></a>What Are Web Services?</h1>
 
       <p><span class="glossaryterm">Web services</span> are client and server applications that communicate over the World Wide Web's (WWW) HyperText Transfer Protocol (HTTP). As described by the World Wide Web Consortium (W3C), web services provide a standard means of interoperating between software applications running on a variety of platforms and frameworks. Web services are characterized by their great interoperability and extensibility as well as their machine-processable descriptions, thanks to the use of XML. Web services can be combined in a loosely coupled way to achieve complex operations. Programs providing simple services can interact with each other to deliver sophisticated added-value services.</p>
     </div>
@@ -47,14 +47,14 @@
     <a id="GIQSX"></a><a id="JEETT00421"></a>
 
     <div class="sect1">
-      <h1 class="sect1"><span class="secnum">27.2</span> <a id="sthref1451"></a><a id="sthref1452"></a><a id="sthref1453"></a>Types of Web Services</h1>
+      <h1 class="sect1" id="sigil_toc_id_981"><span class="secnum">27.2</span> <a id="sthref1451"></a><a id="sthref1452"></a><a id="sthref1453"></a>Types of Web Services</h1>
 
       <p>On the conceptual level, a service is a software component provided through a network-accessible endpoint. The service consumer and provider use messages to exchange invocation request and response information in the form of self-containing documents that make very few assumptions about the technological capabilities of the receiver.</p>
 
       <p>On a technical level, web services can be implemented in various ways. The two types of web services discussed in this section can be distinguished as "big" web services and "RESTful" web services.</p><a id="GKCDG"></a><a id="JEETT01042"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">27.2.1</span> <a id="sthref1454"></a>"Big" Web Services</h2>
+        <h2 class="sect2" id="sigil_toc_id_982"><span class="secnum">27.2.1</span> <a id="sthref1454"></a>"Big" Web Services</h2>
 
         <p>In Java EE 7, JAX-WS provides the functionality for "big" web services, which are described in <a href="../Text/jaxws.xhtml#BNAYL">Chapter 28, "Building Web Services with JAX-WS"</a>. Big web services use XML messages that follow the Simple Object Access Protocol (SOAP) standard, an XML language defining a message architecture and message formats. Such systems often contain a machine-readable description of the operations offered by the service, written in the Web Services Description Language (WSDL), an XML language for defining interfaces syntactically.</p>
 
@@ -78,7 +78,7 @@
       </div><a id="GKCAW"></a><a id="JEETT01043"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">27.2.2</span> <a id="sthref1455"></a>RESTful Web Services</h2>
+        <h2 class="sect2" id="sigil_toc_id_983"><span class="secnum">27.2.2</span> <a id="sthref1455"></a>RESTful Web Services</h2>
 
         <p>In Java EE 7, JAX-RS provides the functionality for Representational State Transfer (RESTful) web services. REST is well suited for basic, ad hoc integration scenarios. RESTful web services, often better integrated with HTTP than SOAP-based services are, do not require XML messages or WSDL service-API definitions.</p>
 
@@ -119,9 +119,9 @@
     <a id="GJBJI"></a><a id="JEETT00422"></a>
 
     <div class="sect1">
-      <h1 class="sect1"><span class="secnum">27.3</span> Deciding Which Type of Web Service to Use</h1>
+      <h1 class="sect1" id="sigil_toc_id_984"><span class="secnum">27.3</span> Deciding Which Type of Web Service to Use</h1>
 
-      <p>Basically, you want to use RESTful web services for integration over the web and big web services in enterprise applicationintegration scenarios that have advanced quality-of-service (QoS) requirements.</p>
+      <p>Basically, you want to use RESTful web services for integration over the web and big web services in enterprise application&ndash;integration scenarios that have advanced quality-of-service (QoS) requirements.</p>
 
       <ul>
         <li>
