--- a/src/Text/dukes-tutoring.xhtml
+++ b/src/Text/dukes-tutoring.xhtml
@@ -41,20 +41,15 @@
     <a id="GKAEI"></a><a id="JEETT00569"></a>
 
     <div class="sect1">
-      <h1 class="sect1"><span class="secnum">58.1</span> Design and Architecture of Duke's Tutoring</h1>
+      <h1 class="sect1" id="sigil_toc_id_160"><span class="secnum">58.1</span> Design and Architecture of Duke's Tutoring</h1>
 
       <p>Duke's Tutoring is a web application that incorporates several Java EE technologies. It exposes both a main interface (for students, guardians, and tutoring center staff) and an administration interface (for staff to maintain the system). The business logic for both interfaces is provided by enterprise beans. The enterprise beans use the Java Persistence API to create and store the application's data in the database. <a href="../Text/dukes-tutoring.xhtml#CHDDJDCH">Figure 58-1</a> illustrates the architecture of the application.</p>
 
       <div class="figure">
         <a id="CHDDJDCH"></a>
 
-        <p class="titleinfigure">Figure 58-1 Architecture of the Duke's Tutoring Example Application</p>
-
-        <div style="text-align: center;"><img alt="Description of Figure 58-1 follows" longdesc="img_text/jeett_dt_061.htm" src="../Images/jeett_dt_061.png" style="line-height: 1.6em;" title="Description of Figure 58-1 follows" /></div>
-      </div>
-
-      <div class="figure">
-        Description of "Figure 58-1 Architecture of the Duke's Tutoring Example Application"<br />
+        <p class="titleinfigure">Figure 58-1 Architecture of the Duke's Tutoring Example Application</p><br />
+        <a href="../Text/img_text/jeett_dt_.xhtml#img_text/jeett_dt_061.htm" id="sthref3055">Description of "Figure 58-1 Architecture of the Duke's Tutoring Example Application"</a><br />
         <br />
       </div>
 
@@ -180,12 +175,12 @@
     <a id="GKAFH"></a><a id="JEETT00570"></a>
 
     <div class="sect1">
-      <h1 class="sect1"><span class="secnum">58.2</span> Main Interface</h1>
+      <h1 class="sect1" id="sigil_toc_id_161"><span class="secnum">58.2</span> Main Interface</h1>
 
       <p>The main interface allows students and staff to check students in and out, and record when students are outside at the playground.</p><a id="GKAFJ"></a><a id="JEETT01326"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">58.2.1</span> Java Persistence API Entities Used in the Main Interface</h2>
+        <h2 class="sect2" id="sigil_toc_id_162"><span class="secnum">58.2.1</span> Java Persistence API Entities Used in the Main Interface</h2>
 
         <p>The following entities used in the main interface encapsulate data stored and manipulated by Duke's Tutoring, and are located in the <code>dukestutoring.entity</code> package in the <code>dukes-tutoring-common</code> project.</p>
 
@@ -219,7 +214,7 @@
       </div><a id="GKAFC"></a><a id="JEETT01327"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">58.2.2</span> Enterprise Beans Used in the Main Interface</h2>
+        <h2 class="sect2" id="sigil_toc_id_163"><span class="secnum">58.2.2</span> Enterprise Beans Used in the Main Interface</h2>
 
         <p>The following enterprise beans used in the main interface provide the business logic for Duke's Tutoring, and are located in the <code>dukestutoring.ejb</code> package in the <code>dukes-tutoring-war</code> project:</p>
 
@@ -239,7 +234,7 @@
       <div class="sect2">
         <a id="sthref3062"></a>
 
-        <h2 class="sect2"><span class="secnum">58.2.3</span> <a id="sthref3063"></a>WebSocket Endpoint Used in the Main Interface</h2>
+        <h2 class="sect2" id="sigil_toc_id_164"><span class="secnum">58.2.3</span> <a id="sthref3063"></a>WebSocket Endpoint Used in the Main Interface</h2>
 
         <p>The <code>javaeetutorial.dukestutoring.web.websocket.StatusEndpoint</code> class is a WebSocket server endpoint that returns students and their status to client endpoints. The <code>StatusEndpoint.updateStatus</code> method is a <a id="sthref3064"></a><a id="sthref3065"></a>CDI observer method for the <code>StatusEvent</code> event. When a student's status changes in the main interface, a <code>StatusEvent</code> is fired. The <code>updateStatus</code> observer method is called by the container, and pushes out the status change to all the client endpoints registered with <code>StatusEndpoint</code>.</p>
 
@@ -249,7 +244,7 @@
       </div><a id="GKAET"></a><a id="JEETT01328"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">58.2.4</span> Facelets Files Used in the Main Interface</h2>
+        <h2 class="sect2" id="sigil_toc_id_165"><span class="secnum">58.2.4</span> Facelets Files Used in the Main Interface</h2>
 
         <p>The Duke's Tutoring application uses Facelets to display the user interface, making extensive use of the templating features of Facelets. Facelets, the default display technology for JavaServer Faces technology, consists of XHTML files located in the <span class="variable">tut-install</span><code>/examples/case-studies/dukes-tutoring-war/src/main/webapp/</code> directory.</p>
 
@@ -305,7 +300,7 @@
       </div><a id="GKADH"></a><a id="JEETT01329"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">58.2.5</span> Helper Classes Used in the Main Interface</h2>
+        <h2 class="sect2" id="sigil_toc_id_166"><span class="secnum">58.2.5</span> Helper Classes Used in the Main Interface</h2>
 
         <p>The following helper classes, found in the <code>dukes-tutoring-common</code> project's <code>dukestutoring.util</code> package, are used in the main interface.</p>
 
@@ -325,7 +320,7 @@
       </div><a id="GKADA"></a><a id="JEETT01330"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">58.2.6</span> Properties Files</h2>
+        <h2 class="sect2" id="sigil_toc_id_167"><span class="secnum">58.2.6</span> Properties Files</h2>
 
         <p>The strings used in the main interface are encapsulated into resource bundles to allow the display of localized strings in multiple locales. Each of the properties files has locale-specific files appended with locale codes, containing the translated strings for each locale. For example, <code>Messages_es.properties</code> contains the localized strings for Spanish locales.</p>
 
@@ -353,7 +348,7 @@
       </div><a id="GKAEV"></a><a id="JEETT01331"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">58.2.7</span> Deployment Descriptors Used in Duke's Tutoring</h2>
+        <h2 class="sect2" id="sigil_toc_id_168"><span class="secnum">58.2.7</span> Deployment Descriptors Used in Duke's Tutoring</h2>
 
         <p>Duke's Tutoring uses these deployment descriptors in the <code>src/main/webapp/WEB-INF</code> directory of the <code>dukes-tutoring-war</code> project:</p>
 
@@ -388,12 +383,12 @@
     <a id="GKAFW"></a><a id="JEETT00571"></a>
 
     <div class="sect1">
-      <h1 class="sect1"><span class="secnum">58.3</span> Administration Interface</h1>
+      <h1 class="sect1" id="sigil_toc_id_169"><span class="secnum">58.3</span> Administration Interface</h1>
 
       <p>The administration interface of Duke's Tutoring is used by the tutoring center staff to manage the data employed by the main interface: the students, the students' guardians, and the addresses. The administration interface uses many of the same components as the main interface. Additional components that are only used in the administration interface are described here.</p><a id="GKAEN"></a><a id="JEETT01332"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">58.3.1</span> Enterprise Beans Used in the Administration Interface</h2>
+        <h2 class="sect2" id="sigil_toc_id_170"><span class="secnum">58.3.1</span> Enterprise Beans Used in the Administration Interface</h2>
 
         <p>The following enterprise bean, in the <code>dukestutoring.ejb</code> package of the <code>dukes-tutoring-war</code> project, is used in the administration interface.</p>
 
@@ -405,7 +400,7 @@
       </div><a id="GKACB"></a><a id="JEETT01333"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">58.3.2</span> Facelets Files Used in the Administration Interface</h2>
+        <h2 class="sect2" id="sigil_toc_id_171"><span class="secnum">58.3.2</span> Facelets Files Used in the Administration Interface</h2>
 
         <p>The following Facelets files, under <code>src/main/webapp/</code>, are used in the administration interface:</p>
 
@@ -451,7 +446,7 @@
       <div class="sect2">
         <a id="sthref3066"></a>
 
-        <h2 class="sect2"><span class="secnum">58.3.3</span> CDI Managed Beans Used in the Administration Interface</h2>
+        <h2 class="sect2" id="sigil_toc_id_172"><span class="secnum">58.3.3</span> CDI Managed Beans Used in the Administration Interface</h2>
 
         <p>The CDI managed beans used in the administration interface are located in the <code>dukestutoring.web</code> package in the <code>dukes-tutoring-war</code> project.</p>
 
@@ -473,7 +468,7 @@
       <div class="sect2">
         <a id="sthref3067"></a>
 
-        <h2 class="sect2"><span class="secnum">58.3.4</span> Helper Classes Used in the Administration Interface</h2>
+        <h2 class="sect2" id="sigil_toc_id_173"><span class="secnum">58.3.4</span> Helper Classes Used in the Administration Interface</h2>
 
         <p>The following helper classes, found in the <code>dukes-tutoring-war</code> project's <code>dukestutoring.web.util</code> package, are used in the administration interface.</p>
 
@@ -498,17 +493,17 @@
     <a id="GKJNN"></a><a id="JEETT00572"></a>
 
     <div class="sect1">
-      <h1 class="sect1"><span class="secnum">58.4</span> Running the Duke's Tutoring Case Study Application</h1>
+      <h1 class="sect1" id="sigil_toc_id_174"><span class="secnum">58.4</span> Running the Duke's Tutoring Case Study Application</h1>
 
       <p>This section describes how to build, package, deploy, and run the Duke's Tutoring application.</p><a id="GKJOA"></a><a id="JEETT01335"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">58.4.1</span> Running Duke's Tutoring</h2>
+        <h2 class="sect2" id="sigil_toc_id_175"><span class="secnum">58.4.1</span> Running Duke's Tutoring</h2>
 
         <p>You can use either NetBeans IDE or Maven to build, package, deploy, and run Duke's Tutoring.</p><a id="GKJNR"></a><a id="JEETT00297"></a>
 
         <div class="sect3">
-          <h3 class="sect3"><span class="secnum">58.4.1.1</span> To Build and Deploy Duke's Tutoring Using NetBeans IDE</h3><a id="sthref3068"></a>
+          <h3 class="sect3 sigil_not_in_toc"><span class="secnum">58.4.1.1</span> To Build and Deploy Duke's Tutoring Using NetBeans IDE</h3><a id="sthref3068"></a>
 
           <p class="subhead2">Before You Begin</p>
 
@@ -529,7 +524,9 @@
 
             <li>
               <p>In the <span class="gui-object-title">Open Project</span> dialog box, navigate to:</p>
-              <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace"><span class="variable">tut-install</span>/examples/case-studies</pre>
+              <pre class="oac_no_warn" xml:space="preserve">
+<span class="variable">tut-install</span>/examples/case-studies
+</pre>
             </li>
 
             <li>
@@ -567,7 +564,7 @@
         </div><a id="GKJOG"></a><a id="JEETT00298"></a>
 
         <div class="sect3">
-          <h3 class="sect3"><span class="secnum">58.4.1.2</span> To Build and Deploy Duke's Tutoring Using Maven</h3>
+          <h3 class="sect3 sigil_not_in_toc"><span class="secnum">58.4.1.2</span> To Build and Deploy Duke's Tutoring Using Maven</h3>
 
           <ol>
             <li>
@@ -580,12 +577,16 @@
 
             <li>
               <p>In a terminal window, go to:</p>
-              <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace"><span class="variable">tut-install</span>/examples/case-studies/dukes-tutoring/</pre>
+              <pre class="oac_no_warn" xml:space="preserve">
+<span class="variable">tut-install</span>/examples/case-studies/dukes-tutoring/
+</pre>
             </li>
 
             <li>
               <p>Enter the following command:</p>
-              <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">mvn install</pre>
+              <pre class="oac_no_warn" xml:space="preserve">
+mvn install
+</pre>
 
               <p>This command creates a JDBC security realm named tutoringRealm, builds and packages the <code>dukes-tutoring-common</code> and <code>dukes-tutoring-war</code> projects, and deploys <code>dukes-tutoring-war</code> to GlassFish Server.</p>
             </li>
@@ -593,7 +594,7 @@
         </div><a id="GKJOC"></a><a id="JEETT00842"></a>
 
         <div class="sect3">
-          <h3 class="sect3"><span class="secnum">58.4.1.3</span> Using Duke's Tutoring</h3>
+          <h3 class="sect3 sigil_not_in_toc"><span class="secnum">58.4.1.3</span> Using Duke's Tutoring</h3>
 
           <p>Once Duke's Tutoring is running on GlassFish Server, use the main interface to experiment with checking students in and out or sending them to the park.</p>
 
@@ -602,7 +603,9 @@
           <ol>
             <li>
               <p>In a web browser, open the main interface at the following URL:</p>
-              <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">http://localhost:8080/dukes-tutoring-war/</pre>
+              <pre class="oac_no_warn" xml:space="preserve">
+http://localhost:8080/dukes-tutoring-war/
+</pre>
             </li>
 
             <li>
@@ -619,7 +622,9 @@
               <p>From the main interface, open the administration interface by clicking <span class="gui-object-action">Administration main page</span> in the left menu.</p>
 
               <p>This redirects you to the login page at the following URL:</p>
-              <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">http://localhost:8080/dukes-tutoring-war/admin/index.xhtml</pre>
+              <pre class="oac_no_warn" xml:space="preserve">
+http://localhost:8080/dukes-tutoring-war/admin/index.xhtml
+</pre>
             </li>
 
             <li>
