--- a/src/Text/ejb-gettingstarted.xhtml
+++ b/src/Text/ejb-gettingstarted.xhtml
@@ -69,7 +69,7 @@
     <a id="GIPSS"></a><a id="JEETT00446"></a>
 
     <div class="sect1">
-      <h1 class="sect1"><span class="secnum">33.1</span> Creating the Enterprise Bean</h1>
+      <h1 class="sect1" id="sigil_toc_id_215"><span class="secnum">33.1</span> Creating the Enterprise Bean</h1>
 
       <p>The enterprise bean in our example is a stateless session bean called <code>ConverterBean</code>. The source code for <code>ConverterBean</code> is in the <span class="variable">tut-install</span><code>/examples/ejb/converter/src/main/java/</code> directory.</p>
 
@@ -86,10 +86,11 @@
       </ol><a id="GIPSX"></a><a id="JEETT01091"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">33.1.1</span> <a id="sthref1709"></a><a id="sthref1710"></a>Coding the Enterprise Bean Class</h2>
+        <h2 class="sect2" id="sigil_toc_id_216"><span class="secnum">33.1.1</span> <a id="sthref1709"></a><a id="sthref1710"></a>Coding the Enterprise Bean Class</h2>
 
         <p>The enterprise bean class for this example is called <code>ConverterBean</code>. This class implements two business methods: <code>dollarToYen</code> and <code>yenToEuro</code>. Because the enterprise bean class doesn't implement a business interface, the enterprise bean exposes a local, no-interface view. The public methods in the enterprise bean class are available to clients that obtain a reference to <code>ConverterBean</code>. The source code for the <code>ConverterBean</code> class is as follows:</p>
-        <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">package javaeetutorial.converter.ejb;
+        <pre class="oac_no_warn" xml:space="preserve">
+package javaeetutorial.converter.ejb;
 
 import java.math.BigDecimal;
 import javax.ejb.*;
@@ -108,29 +109,35 @@ public class ConverterBean {
         BigDecimal result = yen.multiply(euroRate);
         return result.setScale(2, BigDecimal.ROUND_UP);
     }
-}</pre>
+}
+</pre>
 
         <p>Note the <code>@Stateless</code> annotation decorating the enterprise bean class. This annotation lets the container know that <code>ConverterBean</code> is a stateless session bean.</p>
       </div><a id="GIPSI"></a><a id="JEETT01092"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">33.1.2</span> Creating the converter Web Client</h2>
+        <h2 class="sect2" id="sigil_toc_id_217"><span class="secnum">33.1.2</span> Creating the converter Web Client</h2>
 
         <p><a id="sthref1711"></a><a id="sthref1712"></a><a id="sthref1713"></a><a id="sthref1714"></a>The web client is contained in the following servlet class under the <span class="variable">tut-install</span><code>/examples/ejb/converter/src/main/java/</code> directory:</p>
-        <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">converter/web/ConverterServlet.java</pre>
+        <pre class="oac_no_warn" xml:space="preserve">
+converter/web/ConverterServlet.java
+</pre>
 
         <p>A Java servlet is a web component that responds to HTTP requests.</p>
 
         <p><a id="sthref1715"></a>The <code>ConverterServlet</code> class uses dependency injection to obtain a reference to <code>ConverterBean</code>. The <code>javax.ejb.EJB</code> annotation is added to the declaration of the private member variable <code>converter</code>, which is of type <code>ConverterBean</code>. <code>ConverterBean</code> exposes a local, no-interface view, so the enterprise bean implementation class is the variable type:</p>
-        <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">@WebServlet(urlPatterns="/")
+        <pre class="oac_no_warn" xml:space="preserve">
+@WebServlet(urlPatterns="/")
 public class ConverterServlet extends HttpServlet {
   @EJB
   ConverterBean converter;
   ...
-}</pre>
+}
+</pre>
 
         <p>When the user enters an amount to be converted to yen and euro, the amount is retrieved from the request parameters; then the <code>ConverterBean.dollarToYen</code> and the <code>ConverterBean.yenToEuro</code> methods are called:</p>
-        <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">...
+        <pre class="oac_no_warn" xml:space="preserve">
+...
 try {
   String amount = request.getParameter("amount");
   if (amount != null &amp;&amp; amount.length()&gt; 0) {
@@ -146,18 +153,19 @@ try {
     ...
   }
   ...
-}</pre>
+}
+</pre>
 
         <p>The results are displayed to the user.</p>
       </div><a id="GIPVV"></a><a id="JEETT01093"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">33.1.3</span> <a id="sthref1716"></a><a id="sthref1717"></a><a id="sthref1718"></a><a id="sthref1719"></a><a id="sthref1720"></a><a id="sthref1721"></a>Running the converter Example</h2>
+        <h2 class="sect2" id="sigil_toc_id_218"><span class="secnum">33.1.3</span> <a id="sthref1716"></a><a id="sthref1717"></a><a id="sthref1718"></a><a id="sthref1719"></a><a id="sthref1720"></a><a id="sthref1721"></a>Running the converter Example</h2>
 
         <p>Now you are ready to compile the enterprise bean class (<code>ConverterBean.java</code>) and the servlet class (<code>ConverterServlet.java</code>) and to package the compiled classes into a WAR file. You can use either NetBeans IDE or Maven to build, package, deploy, and run the <code>converter</code> example.</p><a id="GIPUM"></a><a id="JEETT00193"></a>
 
         <div class="sect3">
-          <h3 class="sect3"><span class="secnum">33.1.3.1</span> To Run the converter Example Using NetBeans IDE</h3>
+          <h3 class="sect3 sigil_not_in_toc"><span class="secnum">33.1.3.1</span> To Run the converter Example Using NetBeans IDE</h3>
 
           <ol>
             <li>
@@ -170,7 +178,9 @@ try {
 
             <li>
               <p>In the <span class="gui-object-title">Open Project</span> dialog box, navigate to:</p>
-              <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace"><span class="variable">tut-install</span>/examples/ejb</pre>
+              <pre class="oac_no_warn" xml:space="preserve">
+<span class="variable">tut-install</span>/examples/ejb
+</pre>
             </li>
 
             <li>
@@ -187,7 +197,9 @@ try {
 
             <li>
               <p>Open a web browser to the following URL:</p>
-              <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">http://localhost:8080/converter</pre>
+              <pre class="oac_no_warn" xml:space="preserve">
+http://localhost:8080/converter
+</pre>
             </li>
 
             <li>
@@ -199,7 +211,7 @@ try {
         </div><a id="GIPVQ"></a><a id="JEETT00194"></a>
 
         <div class="sect3">
-          <h3 class="sect3"><span class="secnum">33.1.3.2</span> To Run the converter Example Using Maven</h3>
+          <h3 class="sect3 sigil_not_in_toc"><span class="secnum">33.1.3.2</span> To Run the converter Example Using Maven</h3>
 
           <ol>
             <li>
@@ -208,19 +220,25 @@ try {
 
             <li>
               <p>In a terminal window, go to:</p>
-              <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace"><span class="variable">tut-install</span>/examples/ejb/converter/</pre>
+              <pre class="oac_no_warn" xml:space="preserve">
+<span class="variable">tut-install</span>/examples/ejb/converter/
+</pre>
             </li>
 
             <li>
               <p>Enter the following command:</p>
-              <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">mvn install</pre>
+              <pre class="oac_no_warn" xml:space="preserve">
+mvn install
+</pre>
 
               <p>This command compiles the source files for the enterprise bean and the servlet, packages the project into a WAR module (<code>converter.war</code>), and deploys the WAR to the server. For more information about Maven, see <a href="../Text/usingexamples.xhtml#BNAAN">Building the Examples</a>.</p>
             </li>
 
             <li>
               <p>Open a web browser to the following URL:</p>
-              <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">http://localhost:8080/converter</pre>
+              <pre class="oac_no_warn" xml:space="preserve">
+http://localhost:8080/converter
+</pre>
             </li>
 
             <li>
@@ -238,12 +256,12 @@ try {
     <a id="GIPTI"></a><a id="JEETT00447"></a>
 
     <div class="sect1">
-      <h1 class="sect1"><span class="secnum">33.2</span> Modifying the Java EE Application</h1>
+      <h1 class="sect1" id="sigil_toc_id_219"><span class="secnum">33.2</span> Modifying the Java EE Application</h1>
 
       <p><a id="sthref1722"></a>GlassFish Server supports iterative development. Whenever you make a change to a Java EE application, you must redeploy the application.</p><a id="GIPUK"></a><a id="JEETT00196"></a>
 
       <div class="sect2">
-        <h2 class="sect2"><span class="secnum">33.2.1</span> To Modify a Class File</h2>
+        <h2 class="sect2" id="sigil_toc_id_220"><span class="secnum">33.2.1</span> To Modify a Class File</h2>
 
         <p>To modify a class file in an enterprise bean, you change the source code, recompile it, and redeploy the application. For example, to update the exchange rate in the <code>dollarToYen</code> business method of the <code>ConverterBean</code> class, you would follow these steps.</p>
 
@@ -274,7 +292,9 @@ try {
 
                   <li>
                     <p>Enter the following command:</p>
-                    <pre class="oac_no_warn" xml:space="preserve" xmlns:xml="http://www.w3.org/XML/1998/namespace">mvn install</pre>
+                    <pre class="oac_no_warn" xml:space="preserve">
+mvn install
+</pre>
 
                     <p>This command repackages and deploys the application.</p>
                   </li>
