--- a/src/Text/partentbeans.xhtml
+++ b/src/Text/partentbeans.xhtml
@@ -14,29 +14,29 @@
 
     <h1>Part VII<br /></h1>
 
-    <h1 class="part">Enterprise Beans</h1>
+    <h1 class="part" id="sigil_toc_id_681">Enterprise Beans</h1>
 
     <p>Part VII explores Enterprise JavaBeans components. This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/ejb-intro.xhtml">Chapter 32, "Enterprise Beans"</a></p>
+        <p><a href="../Text/ejb-intro.xhtml#GIJSZ">Chapter 32, "Enterprise Beans"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/ejb-gettingstarted.xhtml">Chapter 33, "Getting Started with Enterprise Beans"</a></p>
+        <p><a href="../Text/ejb-gettingstarted.xhtml#GIJRE">Chapter 33, "Getting Started with Enterprise Beans"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/ejb-basic-examples.xhtml">Chapter 34, "Running the Enterprise Bean Examples"</a></p>
+        <p><a href="../Text/ejb-basicexamples.xhtml#GIJRB">Chapter 34, "Running the Enterprise Bean Examples"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/ejb-embedded.xhtml">Chapter 35, "Using the Embedded Enterprise Bean Container"</a></p>
+        <p><a href="../Text/ejb-embedded.xhtml#GKCQZ">Chapter 35, "Using the Embedded Enterprise Bean Container"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/ejb-async.xhtml">Chapter 36, "Using Asynchronous Method Invocation in Session Beans"</a></p>
+        <p><a href="../Text/ejb-async.xhtml#GKIDZ">Chapter 36, "Using Asynchronous Method Invocation in Session Beans"</a></p>
       </li>
     </ul>
   </div>
