--- a/src/Text/partintro.xhtml
+++ b/src/Text/partintro.xhtml
@@ -14,17 +14,17 @@
 
     <h1>Part I<br /></h1>
 
-    <h1 class="part">Introduction</h1>
+    <h1 class="part" id="sigil_toc_id_682">Introduction</h1>
 
     <p>Part I introduces the platform, the tutorial, and the examples. This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/overview.xhtml">Chapter 1, "Overview"</a></p>
+        <p><a href="../Text/overview.xhtml#BNAAW">Chapter 1, "Overview"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/usingexamples.xhtml">Chapter 2, "Using the Tutorial Examples"</a></p>
+        <p><a href="../Text/usingexamples.xhtml#GFIUD">Chapter 2, "Using the Tutorial Examples"</a></p>
       </li>
     </ul>
   </div>
