--- a/src/Text/partplatform.xhtml
+++ b/src/Text/partplatform.xhtml
@@ -14,21 +14,21 @@
 
     <h1>Part II<br /></h1>
 
-    <h1 class="part">Platform Basics</h1>
+    <h1 class="part" id="sigil_toc_id_685">Platform Basics</h1>
 
     <p>Part II introduces platform basics. This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/resource-creation.xhtml">Chapter 3, "Resource Creation"</a></p>
+        <p><a href="../Text/resource-creation.xhtml#GKJIQ2">Chapter 3, "Resource Creation"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/injection.xhtml">Chapter 4, "Injection"</a></p>
+        <p><a href="../Text/injection.xhtml#GKJIQ3">Chapter 4, "Injection"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/packaging.xhtml">Chapter 5, "Packaging"</a></p>
+        <p><a href="../Text/packaging.xhtml#GKJIQ4">Chapter 5, "Packaging"</a></p>
       </li>
     </ul>
   </div>
