--- a/src/Text/partsecurity.xhtml
+++ b/src/Text/partsecurity.xhtml
@@ -14,25 +14,25 @@
 
     <h1>Part X<br /></h1>
 
-    <h1 class="part">Security</h1>
+    <h1 class="part" id="sigil_toc_id_686">Security</h1>
 
     <p>Part X explores security concepts and examples. This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/security-intro.xhtml">Chapter 47, "Introduction to Security in the Java EE Platform"</a></p>
+        <p><a href="../Text/security-intro.xhtml#BNBWJ">Chapter 47, "Introduction to Security in the Java EE Platform"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/security-webtier.xhtml">Chapter 48, "Getting Started Securing Web Applications"</a></p>
+        <p><a href="../Text/security-webtier.xhtml#BNCAS">Chapter 48, "Getting Started Securing Web Applications"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/security-javaee.xhtml">Chapter 49, "Getting Started Securing Enterprise Applications"</a></p>
+        <p><a href="../Text/security-javaee.xhtml#BNBYK">Chapter 49, "Getting Started Securing Enterprise Applications"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/security-advanced.xhtml">Chapter 50, "Java EE Security: Advanced Topics"</a></p>
+        <p><a href="../Text/security-advanced.xhtml#GJJWX">Chapter 50, "Java EE Security: Advanced Topics"</a></p>
       </li>
     </ul>
   </div>
