--- a/src/Text/partwebsvcs.xhtml
+++ b/src/Text/partwebsvcs.xhtml
@@ -14,29 +14,29 @@
 
     <h1>Part VI<br /></h1>
 
-    <h1 class="part">Web Services</h1>
+    <h1 class="part" id="sigil_toc_id_688">Web Services</h1>
 
     <p>Part VI explores web services. This part contains the following chapters:</p>
 
     <ul>
       <li>
-        <p><a href="../Text/webservices-intro.xhtml">Chapter 27, "Introduction to Web Services"</a></p>
+        <p><a href="../Text/webservices-intro.xhtml#GIJTI">Chapter 27, "Introduction to Web Services"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jaxws.xhtml">Chapter 28, "Building Web Services with JAX-WS"</a></p>
+        <p><a href="../Text/jaxws.xhtml#BNAYL">Chapter 28, "Building Web Services with JAX-WS"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jaxrs.xhtml">Chapter 29, "Building RESTful Web Services with JAX-RS"</a></p>
+        <p><a href="../Text/jaxrs.xhtml#GIEPU">Chapter 29, "Building RESTful Web Services with JAX-RS"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jaxrs-client.xhtml">Chapter 30, "Accessing REST Resources with the JAX-RS Client API"</a></p>
+        <p><a href="../Text/jaxrs-client.xhtml#BABEIGIH">Chapter 30, "Accessing REST Resources with the JAX-RS Client API"</a></p>
       </li>
 
       <li>
-        <p><a href="../Text/jaxrs-advanced.xhtml">Chapter 31, "JAX-RS: Advanced Topics and an Example"</a></p>
+        <p><a href="../Text/jaxrs-advanced.xhtml#GJJXE">Chapter 31, "JAX-RS: Advanced Topics and an Example"</a></p>
       </li>
     </ul>
   </div>
