--- a/src/Text/preface.xhtml
+++ b/src/Text/preface.xhtml
@@ -16,7 +16,7 @@
 
     <p>This tutorial is a guide to developing enterprise applications for the Java Platform, Enterprise Edition 7 (Java EE 7), using GlassFish Server Open Source Edition.</p>
 
-    <p>GlassFish Server Open Source Edition is the leading open-source and open-community platform for building and deploying next-generation applications and services. GlassFish Server Open Source Edition, developed by the GlassFish project open-source community at <code><a href="../Text/preface.xhtml#https%3A//glassfish.java.net/">https://glassfish.java.net/</a></code>, is the first compatible implementation of the Java EE 7 platform specification. This lightweight, flexible, and open-source application server enables organizations not only to leverage the new capabilities introduced within the Java EE 7 specification, but also to add to their existing capabilities through a faster and more streamlined development and deployment cycle. GlassFish Server Open Source Edition is hereafter referred to as GlassFish Server.</p>
+    <p>GlassFish Server Open Source Edition is the leading open-source and open-community platform for building and deploying next-generation applications and services. GlassFish Server Open Source Edition, developed by the GlassFish project open-source community at <code><a href="../Text/https://glassfish.java.net/.xhtml#https://glassfish.java.net/">https://glassfish.java.net/</a></code>, is the first compatible implementation of the Java EE 7 platform specification. This lightweight, flexible, and open-source application server enables organizations not only to leverage the new capabilities introduced within the Java EE 7 specification, but also to add to their existing capabilities through a faster and more streamlined development and deployment cycle. GlassFish Server Open Source Edition is hereafter referred to as GlassFish Server.</p>
 
     <p>The following topics are addressed here:</p>
 
@@ -46,33 +46,33 @@
       </li>
     </ul><a id="CIACGIBD"></a>
 
-    <h2 class="prefsect1">Audience</h2>
+    <h2 class="prefsect1" id="sigil_toc_id_782">Audience</h2>
 
     <p>This tutorial is intended for programmers interested in developing and deploying Java EE 7 applications. It covers the technologies comprising the Java EE platform and describes how to develop Java EE components and deploy them on the Java EE Software Development Kit (SDK).</p><a id="CIAHFICG"></a>
 
-    <h2 class="prefsect1">Documentation Accessibility</h2>
+    <h2 class="prefsect1" id="sigil_toc_id_783">Documentation Accessibility</h2>
 
-    <p>For information about Oracle's commitment to accessibility, visit the Oracle Accessibility Program website at <code><a href="../Text/preface.xhtml#http%3A//www.oracle.com/pls/topic/lookup%3Fctx%3Dacc%26id%3Ddocacc">http://www.oracle.com/pls/topic/lookup?ctx=accid=docacc</a></code>.</p><a id="BNAAC"></a><a id="JEETT00301"></a>
+    <p>For information about Oracle's commitment to accessibility, visit the Oracle Accessibility Program website at <code><a href="../Text/http://www.oracle.com/pls/topic/lookup?ctx=acc&amp;id=docacc.xhtml#http://www.oracle.com/pls/topic/lookup?ctx=acc&amp;id=docacc">http://www.oracle.com/pls/topic/lookup?ctx=acc&amp;id=docacc</a></code>.</p><a id="BNAAC"></a><a id="JEETT00301"></a>
 
-    <h2 class="prefsect1">Before You Read This Book</h2>
+    <h2 class="prefsect1" id="sigil_toc_id_784">Before You Read This Book</h2>
 
-    <p>Before proceeding with this tutorial, you should have a good knowledge of the Java programming language. A good way to get to that point is to work through the Java Tutorials (<code><a href="../Text/preface.xhtml#http%3A//docs.oracle.com/javase/tutorial/index.html">http://docs.oracle.com/javase/tutorial/index.html</a></code>).</p><a id="GIPRL"></a><a id="JEETT00302"></a>
+    <p>Before proceeding with this tutorial, you should have a good knowledge of the Java programming language. A good way to get to that point is to work through the Java Tutorials (<code><a href="../Text/http://docs.oracle.com/javase/tutorial/index.xhtml#http://docs.oracle.com/javase/tutorial/index.html">http://docs.oracle.com/javase/tutorial/index.html</a></code>).</p><a id="GIPRL"></a><a id="JEETT00302"></a>
 
-    <h2 class="prefsect1">Related Documentation</h2>
+    <h2 class="prefsect1" id="sigil_toc_id_785">Related Documentation</h2>
 
-    <p>The GlassFish Server documentation set describes deployment planning and system installation. To obtain documentation for GlassFish Server Open Source Edition, go to <code><a href="../Text/preface.xhtml#https%3A//glassfish.java.net/docs/">https://glassfish.java.net/docs/</a></code>.</p>
+    <p>The GlassFish Server documentation set describes deployment planning and system installation. To obtain documentation for GlassFish Server Open Source Edition, go to <code><a href="../Text/https://glassfish.java.net/docs/.xhtml#https://glassfish.java.net/docs/">https://glassfish.java.net/docs/</a></code>.</p>
 
-    <p>The Java EE 7 API specification can be viewed at <code><a href="../Text/preface.xhtml#http%3A//docs.oracle.com/javaee/7/api/">http://docs.oracle.com/javaee/7/api/</a></code> and is also provided in the Java EE 7 SDK.</p>
+    <p>The Java EE 7 API specification can be viewed at <code><a href="../Text/http://docs.oracle.com/javaee/7/api/.xhtml#http://docs.oracle.com/javaee/7/api/">http://docs.oracle.com/javaee/7/api/</a></code> and is also provided in the Java EE 7 SDK.</p>
 
-    <p>Additionally, the Java EE Specifications at <code><a href="../Text/preface.xhtml#http%3A//www.oracle.com/technetwork/java/javaee/tech/index.html">http://www.oracle.com/technetwork/java/javaee/tech/index.html</a></code> might be useful.</p>
+    <p>Additionally, the Java EE Specifications at <code><a href="../Text/http://www.oracle.com/technetwork/java/javaee/tech/index.xhtml#http://www.oracle.com/technetwork/java/javaee/tech/index.html">http://www.oracle.com/technetwork/java/javaee/tech/index.html</a></code> might be useful.</p>
 
-    <p>For information about creating enterprise applications in the NetBeans Integrated Development Environment (IDE), see <code><a href="../Text/preface.xhtml#http%3A//www.netbeans.org/kb/">http://www.netbeans.org/kb/</a></code>.</p>
+    <p>For information about creating enterprise applications in the NetBeans Integrated Development Environment (IDE), see <code><a href="../Text/http://www.netbeans.org/kb/.xhtml#http://www.netbeans.org/kb/">http://www.netbeans.org/kb/</a></code>.</p>
 
-    <p>For information about the Java DB database for use with GlassFish Server, see <code><a href="../Text/preface.xhtml#http%3A//www.oracle.com/technetwork/java/javadb/overview/index.html">http://www.oracle.com/technetwork/java/javadb/overview/index.html</a></code>.</p>
+    <p>For information about the Java DB database for use with GlassFish Server, see <code><a href="../Text/http://www.oracle.com/technetwork/java/javadb/overview/index.xhtml#http://www.oracle.com/technetwork/java/javadb/overview/index.html">http://www.oracle.com/technetwork/java/javadb/overview/index.html</a></code>.</p>
 
-    <p>The GlassFish Samples project is a collection of sample applications that demonstrate a broad range of Java EE technologies. The GlassFish Samples are bundled with the Java EE Software Development Kit (SDK) and are also available from the GlassFish Samples project page at <code><a href="../Text/preface.xhtml#https%3A//glassfish-samples.java.net/">https://glassfish-samples.java.net/</a></code>.</p><a id="GKVTF"></a><a id="JEETT00303"></a>
+    <p>The GlassFish Samples project is a collection of sample applications that demonstrate a broad range of Java EE technologies. The GlassFish Samples are bundled with the Java EE Software Development Kit (SDK) and are also available from the GlassFish Samples project page at <code><a href="../Text/https://glassfish-samples.java.net/.xhtml#https://glassfish-samples.java.net/">https://glassfish-samples.java.net/</a></code>.</p><a id="GKVTF"></a><a id="JEETT00303"></a>
 
-    <h2 class="prefsect1">Conventions</h2>
+    <h2 class="prefsect1" id="sigil_toc_id_786">Conventions</h2>
 
     <p>The following table describes the typographic conventions that are used in this book.</p>
 
@@ -148,7 +148,7 @@
       </table><br />
     </div><a id="GFIRK"></a><a id="JEETT00304"></a>
 
-    <h2 class="prefsect1">Default Paths and File Names</h2>
+    <h2 class="prefsect1" id="sigil_toc_id_787">Default Paths and File Names</h2>
 
     <p>The following table describes the default paths and file names that are used in this book.</p>
 
